--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta property="og:image:height" content="504">
     <!-- Custom Browsers Color-->
     <meta name="theme-color" content="#000">
-    <link rel="stylesheet" href="/libs/fancybox/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="libs/fancybox/jquery.fancybox.min.css">
     <link rel="stylesheet" href="libs/slick/slick.css">
     <link rel="stylesheet" href="css/main.min.css">
   </head>
@@ -901,7 +901,7 @@
           <div class="footer__row row">
             <div class="col-xxxl-6 col-lg-5">
               <div class="footer__map-wrap">
-                <div class="footer__map" id="map1" data-img="/img/svg/mark.svg">
+                <div class="footer__map" id="map1" data-img="img/svg/mark.svg">
                 </div>
               </div>
             </div>
