--- a/public/02-about.html
+++ b/public/02-about.html
@@ -294,7 +294,7 @@
                 <div class="section-title">
                   <h2 class="section-title__sm">О КОМПАНИИ
                   </h2>
-                </div>
+                </div> 
                 <div class="title">Наша команда работает, чтобы предлагать Вам наилучшие решения<span class="text-primary">.</span></div>
                 <p>Компания &laquo;Биссектриса&raquo; более 16&nbsp;лет занимается производством, продажей  и&nbsp;установкой окон в&nbsp;Санкт-Петербурге. Накопленный опыт производства,  а&nbsp;также современные производственные линии, оснащенные высокоточным  немецким оборудованием, многоступенчатый контроль качества, позволяют нам  предлагать высококачественные пластиковые и&nbsp;деревянные окна  по&nbsp;максимально конкурентным ценам, свидетельством чему являются  многочисленные положительные отзывы и&nbsp;благодарности наших клиентов.  По&nbsp;мнению многих клиентов мы&nbsp;производим, продаем и&nbsp;устанавливаем лучшие  окна в&nbsp;Санкт-Петербурге.</p>
                 <nav>
@@ -311,6 +311,7 @@
           </div>
         </div>
       </div>
+      <!-- end header-block-->
       <!-- end header-block-->
       <!-- start s-history-->
       <section class="s-history section lazy-background" id="s-history">
